--- a/Bachelor thesis/front/macros.tex
+++ b/Bachelor thesis/front/macros.tex
@@ -6,7 +6,7 @@
 \newcommand{\promotion}     {2024}                                  %<---------
 
 \newcommand{\thesistype}    {Bachelor thesis}
-\newcommand{\thesistitle}   {Verification of Boyer-Moore algorithm in F*}    %<---------
+\newcommand{\thesistitle}   {Implementing and Verifying the BMH Algorithm in F*}    %<---------
 
 \newcommand{\authorlast}    {Dumitru}                               %<---------
 \newcommand{\authorfirst}   {Daniel-Antoniu}
@@ -17,6 +17,6 @@
 \newcommand{\authorcnp}     {complete}                         %<---------
 
 \newcommand{\session}       {july, 2024}                       %<---------
-\newcommand{\coordinator}   {Associate Professor Ciobâcă Ștefan}               %<---------
+\newcommand{\coordinator}   {Associate Professor Ștefan Ciobâcă}               %<---------
 
 \newcommand{\dottedline}    {............................}
