--- a/Bachelor thesis/main.tex
+++ b/Bachelor thesis/main.tex
@@ -4,11 +4,14 @@
 \usepackage{geometry}           % page size
 \usepackage[utf8]{inputenc}     % encoding
 \usepackage{palatino}           % font
-\usepackage[romanian]{babel}    % language
+\usepackage[english]{babel}    % language
 \usepackage{graphicx}           % images
 \usepackage{indentfirst}        % indentation
 \usepackage[nottoc]{tocbibind}  % table of contents style
 \usepackage[unicode]{hyperref}  % references from the table of contents
+\usepackage{minted}
+\usepackage{array}
+\usepackage{multirow}
 
 % includes options
 \geometry{  a4paper,            % scientific thesis standard
@@ -33,9 +36,9 @@
     \pagenumbering{gobble}
     
     \input{front/cover}
-    \input{front/titlepage}
-    \input{front/declaration1}
-    \input{front/declaration2}
+    % \input{front/titlepage}
+    % \input{front/declaration1}
+    % \input{front/declaration2}
     
     % table of contents
     \tableofcontents
@@ -44,13 +47,17 @@
     \setcounter{page}{1}
     \pagenumbering{arabic}
     
-    \input{chapters/motivation}
     \input{chapters/introduction}
+    \input{chapters/contributions}
     
     \input{chapters/chapter1}
     \input{chapters/chapter2}
     \input{chapters/chapter3}
     
     \input{chapters/conclusions}
-    \input{chapters/bibliography}
+    % \input{chapters/bibliography}
+
+    \bibliographystyle{unsrt}
+    \bibliography{references}
+    \nocite{*}
 \end{document}
